--- a/templates/difftable.html
+++ b/templates/difftable.html
@@ -40,19 +40,19 @@
 
     </div>
 
-<script>
-    function cellStyle(value,field) {
-        var classes = ['active', 'success', 'info', 'warning', 'danger'];
-
-        if (field==1) {
-            return {
-                classes:'btn btn-info',
-
-            };
-        }
-        return {};
-    }
-</script>
+{#<script>#}
+{#    function cellStyle(value,field) {#}
+{#        var classes = ['active', 'success', 'info', 'warning', 'danger'];#}
+{##}
+{#        if (field==1) {#}
+{#            return {#}
+{#                classes:'btn btn-info',#}
+{##}
+{#            };#}
+{#        }#}
+{#        return {};#}
+{#    }#}
+{#</script>#}
     <!--加载bootstrap-table.css-->
         <link  href="{% static 'bootstraptable/bootstrap-table.css' %}" rel="stylesheet">
     <!--加载bootstrap-table.css-->
