--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'datepicker/css/bootstrap-datetimepicker.min.css' %}" rel="stylesheet">
+    <link href="{% static 'bootstrap-select/css/bootstrap-select.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.1.9.1.js' %}"></script>
-
+    <script src="{% static 'bootstrap-select/js/bootstrap-select.min.js' %}"></script>
+    <script src="{% static 'bootstrap-select/js/i18n/defaults-zh_CN.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <script src="{% static 'datepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
